@@ -7,6 +7,7 @@
 <script type="text/javascript" src="config/custom.js"></script>
 <script type="text/javascript" src="javascript/main.js"></script>
 <script type="text/javascript" src="javascript/weather.js"></script>
+<script type="text/javascript" src="javascript/news.js"></script>
 <script type="text/javascript">
 
 /***********************************************************/
